--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1359,68 +1359,34 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     </tbody>
   </table>
 
-  <!-- Tabela 4.2 — Áreas integradas (bordas visíveis) -->
-  <table style="width:100%; border-collapse:collapse; font-size:.95rem; margin-top:12px;">
-    <caption style="text-align:left; font-weight:700; margin:6px 0;">Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico e por fluência</caption>
+  <!-- Tabela 4.2 — Áreas integradas (EX4/4.2) -->
+  <table style="width:100%; border-collapse:collapse; font-size:.95rem;">
+    <caption style="text-align:left; font-weight:700; margin:6px 0;">
+      Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico
+    </caption>
     <thead>
       <tr>
-        <th style="border:1px solid #333; padding:6px 8px;">Pico (cm⁻¹)</th>
-        <th style="border:1px solid #333; padding:6px 8px;">F0 (não irradiada)</th>
-        <th style="border:1px solid #333; padding:6px 8px;">1,0×10¹⁰</th>
-        <th style="border:1px solid #333; padding:6px 8px;">2,5×10¹⁰</th>
-        <th style="border:1px solid #333; padding:6px 8px;">5,0×10¹⁰</th>
-        <th style="border:1px solid #333; padding:6px 8px;">Obs. (tendência)</th>
+        <th style="border:1px solid #333; padding:6px 8px; width:120px;">Pico (cm⁻¹)</th>
+        <th style="border:1px solid #333; padding:6px 8px;">Área integrada</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td style="border:1px solid #333; padding:6px 8px;">781</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">0,0031</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;"></td>
-      </tr>
-      <tr>
-        <td style="border:1px solid #333; padding:6px 8px;">1040</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">0,0017</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;"></td>
-      </tr>
-      <tr>
-        <td style="border:1px solid #333; padding:6px 8px;">1702</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">0,0011</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;"></td>
-      </tr>
-      <tr>
-        <td style="border:1px solid #333; padding:6px 8px;">1718</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">0,0008</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;"></td>
-      </tr>
-      <tr>
-        <td style="border:1px solid #333; padding:6px 8px;">2139</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;">0,0028</td>
-        <td style="border:1px solid #333; padding:6px 8px;">—</td>
-        <td style="border:1px solid #333; padding:6px 8px;"></td>
-      </tr>
+      <tr><td style="border:1px solid #333; padding:6px 8px;">781</td><td style="border:1px solid #333; padding:6px 8px;">0,0031</td></tr>
+      <tr><td style="border:1px solid #333; padding:6px 8px;">1040</td><td style="border:1px solid #333; padding:6px 8px;">0,0017</td></tr>
+      <tr><td style="border:1px solid #333; padding:6px 8px;">1702</td><td style="border:1px solid #333; padding:6px 8px;">0,0011</td></tr>
+      <tr><td style="border:1px solid #333; padding:6px 8px;">1718</td><td style="border:1px solid #333; padding:6px 8px;">0,0008</td></tr>
+      <tr><td style="border:1px solid #333; padding:6px 8px;">2139</td><td style="border:1px solid #333; padding:6px 8px;">0,0028</td></tr>
     </tbody>
   </table>
 
 </div>
 
+
+
+
+
+
   
-
-
 <div class="enunciado" style="text-align:justify;">
   4.3 - Fazer os gráficos com estes valores no programa ORIGIN:
   <br>4.3.1 - Gráfico Área X  fluência
