--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1317,69 +1317,73 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 </div>
 
 
-<!-- ================ -->
+
+
+
+  <!-- ================ -->
 <div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
 
   <!-- Tabela 4.1 — Atribuições (sem coluna Status) -->
-  <table style="width:100%; border-collapse:collapse; font-size:.95rem;">
+  <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:980px; margin:auto; font-size:0.95rem; background:#fff;">
     <caption style="text-align:left; font-weight:700; margin:6px 0;">Tabela 4.1 — Atribuições propostas (Bandas Filho)</caption>
-    <thead>
+    <thead style="background:#f5f5f5;">
       <tr>
-        <th style="border:1px solid #333; padding:6px 8px; text-align:center; width:90px;">Pico (cm⁻¹)</th>
-        <th style="border:1px solid #333; padding:6px 8px; width:320px;">Substância Correspondente (Modo vibracional)</th>
-        <th style="border:1px solid #333; padding:6px 8px;">Referência (AUTOR, ano) — link</th>
+        <th style="text-align:left; width:90px;">Pico (cm⁻¹)</th>
+        <th style="text-align:left; width:320px;">Substância Correspondente (Modo vibracional)</th>
+        <th style="text-align:left;">Referência (AUTOR, ano) — link</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">781</td>
-        <td style="border:1px solid #333; padding:6px 8px;"><em>Produto de irradiação</em> (banda-filho, <strong>a determinar</strong>)</td>
-        <td style="border:1px solid #333; padding:6px 8px;">(ROTEIRO, 2025/2) <a href="EN-InstrumProcFisBioRoteiroTarefa2.pdf">[InstrumProcFisBioRoteiroTarefa2.pdf]</a></td>
+        <td><strong>781</strong></td>
+        <td><em>Produto de irradiação</em> (banda-filho, <strong>a determinar</strong>)</td>
+        <td>(ROTEIRO, 2025/2) <a href="EN-InstrumProcFisBioRoteiroTarefa2.pdf">[InstrumProcFisBioRoteiroTarefa2.pdf]</a></td>
       </tr>
       <tr>
-        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">1040</td>
-        <td style="border:1px solid #333; padding:6px 8px;">Ozônio (O<sub>3</sub>), &nu;<sub>3</sub> (assimétrico)</td>
-        <td style="border:1px solid #333; padding:6px 8px;"><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+        <td><strong>1040</strong></td>
+        <td>Ozônio (O<sub>3</sub>), &nu;<sub>3</sub> (assimétrico)</td>
+        <td><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
       </tr>
       <tr>
-        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">1702</td>
-        <td style="border:1px solid #333; padding:6px 8px;">Pentóxido de dinitrogênio (N<sub>2</sub>O<sub>5</sub>), &nu;<sub>9</sub></td>
-        <td style="border:1px solid #333; padding:6px 8px;"><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+        <td><strong>1702</strong></td>
+        <td>Pentóxido de dinitrogênio (N<sub>2</sub>O<sub>5</sub>), &nu;<sub>9</sub></td>
+        <td><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
       </tr>
       <tr>
-        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">1718</td>
-        <td style="border:1px solid #333; padding:6px 8px;">Provável NO<sub>x</sub> (N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>), sítios/conformeros</td>
-        <td style="border:1px solid #333; padding:6px 8px;"><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+        <td><strong>1718</strong></td>
+        <td>Provável NO<sub>x</sub> (N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>), sítios/conformeros</td>
+        <td><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
       </tr>
       <tr>
-        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">2139</td>
-        <td style="border:1px solid #333; padding:6px 8px;">Monóxido de carbono (CO), estiramento C≡O</td>
-        <td style="border:1px solid #333; padding:6px 8px;"><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+        <td><strong>2139</strong></td>
+        <td>Monóxido de carbono (CO), estiramento C≡O</td>
+        <td><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
       </tr>
     </tbody>
   </table>
 
   <!-- Tabela 4.2 — Áreas integradas (EX4/4.2) -->
-  <table style="width:100%; border-collapse:collapse; font-size:.95rem;">
+  <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:980px; margin:12px auto 0; font-size:0.95rem; background:#fff;">
     <caption style="text-align:left; font-weight:700; margin:6px 0;">
       Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico
     </caption>
-    <thead>
+    <thead style="background:#f5f5f5;">
       <tr>
-        <th style="border:1px solid #333; padding:6px 8px; width:120px;">Pico (cm⁻¹)</th>
-        <th style="border:1px solid #333; padding:6px 8px;">Área integrada</th>
+        <th style="text-align:left; width:120px;">Pico (cm⁻¹)</th>
+        <th style="text-align:left;">Área integrada</th>
       </tr>
     </thead>
     <tbody>
-      <tr><td style="border:1px solid #333; padding:6px 8px;">781</td><td style="border:1px solid #333; padding:6px 8px;">0,0031</td></tr>
-      <tr><td style="border:1px solid #333; padding:6px 8px;">1040</td><td style="border:1px solid #333; padding:6px 8px;">0,0017</td></tr>
-      <tr><td style="border:1px solid #333; padding:6px 8px;">1702</td><td style="border:1px solid #333; padding:6px 8px;">0,0011</td></tr>
-      <tr><td style="border:1px solid #333; padding:6px 8px;">1718</td><td style="border:1px solid #333; padding:6px 8px;">0,0008</td></tr>
-      <tr><td style="border:1px solid #333; padding:6px 8px;">2139</td><td style="border:1px solid #333; padding:6px 8px;">0,0028</td></tr>
+      <tr><td><strong>781</strong></td><td>0,0031</td></tr>
+      <tr><td><strong>1040</strong></td><td>0,0017</td></tr>
+      <tr><td><strong>1702</strong></td><td>0,0011</td></tr>
+      <tr><td><strong>1718</strong></td><td>0,0008</td></tr>
+      <tr><td><strong>2139</strong></td><td>0,0028</td></tr>
     </tbody>
   </table>
 
 </div>
+
 
 
 
