--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1319,11 +1319,10 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 
 
-
-  <!-- ================ -->
+<!-- ================ -->
 <div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
 
-  <!-- Tabela 4.1 — Atribuições (sem coluna Status) -->
+  <!-- 4.1 — Tabela 4.1 Atribuições (sem coluna Status) -->
   <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:980px; margin:auto; font-size:0.95rem; background:#fff;">
     <caption style="text-align:left; font-weight:700; margin:6px 0;">Tabela 4.1 — Atribuições propostas (Bandas Filho)</caption>
     <thead style="background:#f5f5f5;">
@@ -1362,15 +1361,15 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     </tbody>
   </table>
 
-  <!-- Tabela 4.2 — Áreas integradas (EX4/4.2) -->
+  <!-- 4.2 — Tabela 4.2 Áreas integradas (com unidades abs·cm⁻¹) -->
   <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:980px; margin:12px auto 0; font-size:0.95rem; background:#fff;">
     <caption style="text-align:left; font-weight:700; margin:6px 0;">
-      Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico
+      Tabela 4.2 — Áreas integradas (<strong>abs·cm⁻¹</strong>) por pico
     </caption>
     <thead style="background:#f5f5f5;">
       <tr>
         <th style="text-align:left; width:120px;">Pico (cm⁻¹)</th>
-        <th style="text-align:left;">Área integrada</th>
+        <th style="text-align:left;">Área integrada (abs·cm⁻¹)</th>
       </tr>
     </thead>
     <tbody>
@@ -1381,6 +1380,10 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
       <tr><td><strong>2139</strong></td><td>0,0028</td></tr>
     </tbody>
   </table>
+
+  <p style="margin:6px 0 0 0; font-size:.9rem; color:#444;">
+    Nota: Espectros convertidos para <em>Absorbance</em>; eixo X em número de onda (cm⁻¹). A área reportada herda “abs” (adimensional) × “cm⁻¹” ⇒ <strong>abs·cm⁻¹</strong>. Baseline linear (endpoints).
+  </p>
 
 </div>
 
