--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1309,54 +1309,68 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 <div class="dicas">
   <h3 style="text-align:justify;">4) Análise de bandas Filho para a amostra irradiada com diversos valores de fluência</h3>
 </div>
-  
+
 <div class="enunciado" style="text-align:justify;">
-  4.1- Identificar através do programa OMINIC a evolução das bandas com os picos dados abaixo, desde a amostra não irradiada até a irradiação com o maior valor de fluência. Quais as substâncias correspondestes?
+  4.1- Identificar através do programa OMNIC a evolução das bandas com os picos dados abaixo, desde a amostra não irradiada até a irradiação com o maior valor de fluência. Quais as substâncias correspondentes?
   <br>
   Bandas Filho para os picos em: &nbsp; 781, 1040, 1702, 1718, 2139
 </div>
 
-
-
-
 <!-- ================ -->
 <div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
 
-  <!-- 4.1 — Tabela 4.1 Atribuições (sem coluna Status) -->
+  <!-- 4.1 — Tabela 4.1 Atribuições (atualizada com literatura) -->
   <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:980px; margin:auto; font-size:0.95rem; background:#fff;">
     <caption style="text-align:left; font-weight:700; margin:6px 0;">Tabela 4.1 — Atribuições propostas (Bandas Filho)</caption>
     <thead style="background:#f5f5f5;">
       <tr>
         <th style="text-align:left; width:90px;">Pico (cm⁻¹)</th>
-        <th style="text-align:left; width:320px;">Substância Correspondente (Modo vibracional)</th>
+        <th style="text-align:left; width:360px;">Substância Correspondente (Modo vibracional)</th>
         <th style="text-align:left;">Referência (AUTOR, ano) — link</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td><strong>781</strong></td>
-        <td><em>Produto de irradiação</em> (banda-filho, <strong>a determinar</strong>)</td>
-        <td>(ROTEIRO, 2025/2) <a href="EN-InstrumProcFisBioRoteiroTarefa2.pdf">[InstrumProcFisBioRoteiroTarefa2.pdf]</a></td>
+        <td>Motivo NO₂ em produtos “filho” de N₂O: <strong>N₂O₃</strong>/<strong>N₂O₄</strong> (δ(NO₂) em ~783–785 cm⁻¹; sítios de matriz)</td>
+        <td>
+          MIFSUD <em>et&nbsp;al.</em>, 2024
+          <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Mifsud_2024_Electron_Irradiation_N2O_Ice.pdf">[PDF]</a>
+          &nbsp;|&nbsp; KOEL <em>et&nbsp;al.</em>, 1998
+          <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Koel_1998_IRAS_NO2_N2O3_N2O4_JPCA.pdf">[PDF]</a>
+        </td>
       </tr>
       <tr>
         <td><strong>1040</strong></td>
-        <td>Ozônio (O<sub>3</sub>), &nu;<sub>3</sub> (assimétrico)</td>
-        <td><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+        <td>Ozônio (O₃), &nu;₃ (assimétrico) ~1039–1043 cm⁻¹</td>
+        <td>
+          JAMIESON <em>et&nbsp;al.</em>, 2005
+          <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[PDF]</a>
+        </td>
       </tr>
       <tr>
         <td><strong>1702</strong></td>
-        <td>Pentóxido de dinitrogênio (N<sub>2</sub>O<sub>5</sub>), &nu;<sub>9</sub></td>
-        <td><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+        <td>Pentóxido de dinitrogênio (N₂O₅), &nu;₉ (região ~1700–1710 cm⁻¹)</td>
+        <td>
+          JAMIESON <em>et&nbsp;al.</em>, 2005
+          <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[PDF]</a>
+        </td>
       </tr>
       <tr>
         <td><strong>1718</strong></td>
-        <td>Provável NO<sub>x</sub> (N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>), sítios/conformeros</td>
-        <td><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+        <td>NOx (N₂O₄/N₂O₅): componente vizinha por sítio/conformero em matriz (∼1715–1723 cm⁻¹)</td>
+        <td>
+          JAMIESON <em>et&nbsp;al.</em>, 2005
+          <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[PDF]</a>
+        </td>
       </tr>
       <tr>
         <td><strong>2139</strong></td>
-        <td>Monóxido de carbono (CO), estiramento C≡O</td>
-        <td><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+        <td>Monóxido de carbono (CO), estiramento C≡O (~2136–2143 cm⁻¹)</td>
+        <td>
+          JAMIESON <em>et&nbsp;al.</em>, 2005
+          <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[PDF]</a>
+        </td>
       </tr>
     </tbody>
   </table>
@@ -1382,24 +1396,16 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   </table>
 
   <p style="margin:6px 0 0 0; font-size:.9rem; color:#444;">
-    Nota: Espectros convertidos para <em>Absorbance</em>; eixo X em número de onda (cm⁻¹). A área reportada herda “abs” (adimensional) × “cm⁻¹” ⇒ <strong>abs·cm⁻¹</strong>. Baseline linear (endpoints).
+    Nota: Espectros convertidos para <em>Absorbance</em>; eixo X em número de onda (cm⁻¹). A área herda “abs” (adimensional) × “cm⁻¹” ⇒ <strong>abs·cm⁻¹</strong>. Baseline linear (endpoints).
   </p>
 
 </div>
 
-
-
-
-
-
-
-  
 <div class="enunciado" style="text-align:justify;">
   4.3 - Fazer os gráficos com estes valores no programa ORIGIN:
-  <br>4.3.1 - Gráfico Área X  fluência
-  <br>4.3.2 - Gráfico Densidade de coluna (N)  X fluência
+  <br>4.3.1 - Gráfico Área × fluência
+  <br>4.3.2 - Gráfico Densidade de coluna (N) × fluência
 </div>
-
 
 <!-- 4.3) Gráficos Área × Fluência e N × Fluência -->
 <div class="print-area" style="text-align:justify; margin-top:8px;">
@@ -1430,15 +1436,16 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     </figure>
   </div>
   <p class="muted" style="margin-top:6px; text-align:justify;">
-    Os dois gráficos atendem ao item <strong>4.3</strong>. O item <strong>4.1</strong> (“evolução espectral”) permanece como
-    captura de tela do OMNIC mostrando os picos “Filho” em diferentes fluências (preencha o <strong>Print 7</strong> quando tiver a imagem).
+    Para o item <strong>4.1</strong>, inclua a captura do OMNIC com os espectros sobrepostos por fluência e destaque visual dos picos “filho”.
   </p>
 </div>
 
-
-  
-  
-
+<!-- Referências (opcional: manter no fim da seção) -->
+<ul style="margin:12px 0 0 0; padding-left:18px; font-size:.92rem;">
+  <li>JAMIESON, C. S. <em>et al.</em> (2005). <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[PDF]</a></li>
+  <li>MIFSUD, D. V. <em>et al.</em> (2024). <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Mifsud_2024_Electron_Irradiation_N2O_Ice.pdf">[PDF]</a></li>
+  <li>KOEL, B. E. <em>et al.</em> (1998). <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Koel_1998_IRAS_NO2_N2O3_N2O4_JPCA.pdf">[PDF]</a></li>
+</ul>
 
   
 
