Improve figure captions and alt texts in section 4.3
Updated captions and alt texts for figures in section 4.3 to provide clearer descriptions.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1401,6 +1401,10 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 </div>
 
+
+
+
+
 <div class="enunciado" style="text-align:justify;">
   4.3 - Fazer os gráficos com estes valores no programa ORIGIN:
   <br>4.3.1 - Gráfico Área × fluência
@@ -1411,42 +1415,39 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 <div class="print-area" style="text-align:justify; margin-top:8px;">
   <strong>Gráficos de 4.3</strong>
   <div style="display:flex; gap:12px; flex-wrap:wrap; align-items:flex-start; margin-top:6px;">
+
     <!-- 4.3.1) Área × Fluência -->
     <figure style="flex:1 1 360px; margin:0;">
+      <figcaption style="font-size:0.92rem; margin:0 0 6px 0; font-weight:600;">
+        <span style="background:#f5f5f5; border:1px solid #ddd; border-radius:4px; padding:2px 6px;">Resposta 4.3.1</span>
+        &nbsp;Área (<em>abs·cm⁻¹</em>) × Fluência (íons·cm⁻²) para <em>c1</em>, <em>c2</em>, <em>c3</em>.
+      </figcaption>
       <img
         src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.1.png"
-        alt="Gráfico: Área (abs·cm⁻¹) versus Fluência para c1, c2 e c3"
+        alt="Resposta 4.3.1 — Gráfico: Área (abs·cm⁻¹) versus Fluência para c1, c2 e c3"
         style="max-width:100%; height:auto; display:block; border:1px solid #ddd; border-radius:4px;"
       >
-      <figcaption style="font-size:0.92rem; margin-top:4px;">
-        Área (abs·cm⁻¹) × Fluência (ions·cm⁻²) para <em>c1</em>, <em>c2</em>, <em>c3</em>.
-      </figcaption>
     </figure>
 
     <!-- 4.3.2) N × Fluência -->
     <figure style="flex:1 1 360px; margin:0;">
+      <figcaption style="font-size:0.92rem; margin:0 0 6px 0; font-weight:600;">
+        <span style="background:#f5f5f5; border:1px solid #ddd; border-radius:4px; padding:2px 6px;">Resposta 4.3.2</span>
+        &nbsp;Densidade de coluna <em>N</em> (moléculas·cm⁻²) × Fluência (íons·cm⁻²) para <em>c1</em>, <em>c2</em>, <em>c3</em>.
+      </figcaption>
       <img
         src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.1-.png"
-        alt="Gráfico: Densidade de coluna N (moléculas·cm⁻²) versus Fluência para c1, c2 e c3"
+        alt="Resposta 4.3.2 — Gráfico: Densidade de coluna N (moléculas·cm⁻²) versus Fluência para c1, c2 e c3"
         style="max-width:100%; height:auto; display:block; border:1px solid #ddd; border-radius:4px;"
       >
-      <figcaption style="font-size:0.92rem; margin-top:4px;">
-        Densidade de coluna <em>N</em> (moléculas·cm⁻²) × Fluência (ions·cm⁻²) para <em>c1</em>, <em>c2</em>, <em>c3</em>.
-      </figcaption>
     </figure>
+
   </div>
+
   <p class="muted" style="margin-top:6px; text-align:justify;">
     Para o item <strong>4.1</strong>, inclua a captura do OMNIC com os espectros sobrepostos por fluência e destaque visual dos picos “filho”.
   </p>
 </div>
-
-<!-- Referências (opcional: manter no fim da seção) -->
-<ul style="margin:12px 0 0 0; padding-left:18px; font-size:.92rem;">
-  <li>JAMIESON, C. S. <em>et al.</em> (2005). <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[PDF]</a></li>
-  <li>MIFSUD, D. V. <em>et al.</em> (2024). <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Mifsud_2024_Electron_Irradiation_N2O_Ice.pdf">[PDF]</a></li>
-  <li>KOEL, B. E. <em>et al.</em> (1998). <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Koel_1998_IRAS_NO2_N2O3_N2O4_JPCA.pdf">[PDF]</a></li>
-</ul>
-
   
 
 
