Revise graphs and text in section 4.3
Updated graphs and descriptions for section 4.3.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1414,17 +1414,24 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 <!-- 4.3) Gráficos Área × Fluência e N × Fluência -->
 <div class="print-area" style="text-align:justify; margin-top:8px;">
   <strong>Gráficos de 4.3</strong>
+  <p style="margin:6px 0 10px 0; font-size:0.92rem; color:#444;">
+    Os gráficos foram gerados via <em>Python</em> (Jupyter) a partir das áreas integradas do OMNIC.
+    Notebook: <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/4_3_origin.ipynb">4_3_origin.ipynb</a>.
+    Arquivos: <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/4.3.1.png">4.3.1.png</a> |
+    <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/4.3.2.png">4.3.2.png</a>.
+  </p>
+
   <div style="display:flex; gap:12px; flex-wrap:wrap; align-items:flex-start; margin-top:6px;">
 
     <!-- 4.3.1) Área × Fluência -->
     <figure style="flex:1 1 360px; margin:0;">
       <figcaption style="font-size:0.92rem; margin:0 0 6px 0; font-weight:600;">
         <span style="background:#f5f5f5; border:1px solid #ddd; border-radius:4px; padding:2px 6px;">Resposta 4.3.1</span>
-        &nbsp;Área (<em>abs·cm⁻¹</em>) × Fluência (íons·cm⁻²) para <em>c1</em>, <em>c2</em>, <em>c3</em>.
+        &nbsp;Foi construído o gráfico de Área (<em>abs·cm⁻¹</em>) × Fluência (íons·cm⁻²) por pico.
       </figcaption>
       <img
-        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.1.png"
-        alt="Resposta 4.3.1 — Gráfico: Área (abs·cm⁻¹) versus Fluência para c1, c2 e c3"
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.3.1.png"
+        alt="Resposta 4.3.1 — Gráfico: Área (abs·cm⁻¹) × Fluência por pico"
         style="max-width:100%; height:auto; display:block; border:1px solid #ddd; border-radius:4px;"
       >
     </figure>
@@ -1433,22 +1440,19 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     <figure style="flex:1 1 360px; margin:0;">
       <figcaption style="font-size:0.92rem; margin:0 0 6px 0; font-weight:600;">
         <span style="background:#f5f5f5; border:1px solid #ddd; border-radius:4px; padding:2px 6px;">Resposta 4.3.2</span>
-        &nbsp;Densidade de coluna <em>N</em> (moléculas·cm⁻²) × Fluência (íons·cm⁻²) para <em>c1</em>, <em>c2</em>, <em>c3</em>.
+        &nbsp;Foi calculada a densidade de coluna <em>N</em> (moléculas·cm⁻²) a partir da área integrada
+        usando \(N=\ln(10)\,\int A(\tilde\nu)\,d\tilde\nu/A\), e plotado <em>N</em> × Fluência para o pico selecionado.
       </figcaption>
       <img
-        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.1-.png"
-        alt="Resposta 4.3.2 — Gráfico: Densidade de coluna N (moléculas·cm⁻²) versus Fluência para c1, c2 e c3"
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.3.2.png"
+        alt="Resposta 4.3.2 — Gráfico: Densidade de coluna N (moléculas·cm⁻²) × Fluência"
         style="max-width:100%; height:auto; display:block; border:1px solid #ddd; border-radius:4px;"
       >
     </figure>
 
   </div>
-
-  <p class="muted" style="margin-top:6px; text-align:justify;">
-    Para o item <strong>4.1</strong>, inclua a captura do OMNIC com os espectros sobrepostos por fluência e destaque visual dos picos “filho”.
-  </p>
 </div>
-  
+
 
 
 
