--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR" data-lang="pt">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="x-ua-compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>[IOA6042] Instrumentação Aplicada a Processos Físicos e Biológicos (2025.2)</title>
 
@@ -26,29 +27,12 @@
     }
     .lang-toggle:focus { outline: 2px solid #cceeff; outline-offset: 2px; }
 
-    /* Show/hide language blocks (opcional; mantém compatibilidade com seu layout atual) */
+    /* (Opcional) blocks PT/EN do seu layout atual — pode manter */
     [data-lang="pt"] #pt { display:block; }
     [data-lang="pt"] #en { display:none; }
     [data-lang="en"] #pt { display:none; }
     [data-lang="en"] #en { display:block; }
-
-    /* ------- Google Translate: esconder a barra e manter layout limpo ------- */
-    .goog-te-banner-frame.skiptranslate, .goog-te-gadget-icon { display:none !important; }
-    body { top: 0 !important; }
-    #google_translate_element { position: fixed; visibility: hidden; z-index: -1; } /* widget oculto */
-    .notranslate { translate: no; } /* use class="notranslate" para proteger trechos */
   </style>
-
-  <!-- Google Translate: init -->
-  <script>
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement(
-        { pageLanguage: 'pt', includedLanguages: 'pt,en', autoDisplay: false },
-        'google_translate_element'
-      );
-    }
-  </script>
-  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
   <!-- MathJax configuration (must appear BEFORE the loader) -->
   <script>
@@ -64,59 +48,67 @@
   <!-- MathJax loader -->
   <script id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+  <!-- Toggle via Google Translate proxy (abre/volta entre PT e EN) -->
+  <script>
+    (function () {
+      // Ajuste estes dois se mudar o usuário/repo do GitHub Pages
+      const CANON_HOST = 'thallescotta.github.io';
+      const TRANS_HOST = 'thallescotta-github-io.translate.goog';
+
+      // Constrói URLs canônica (PT) e traduzida (EN) para a página atual
+      function buildUrls() {
+        const path = location.pathname + location.search + location.hash;
+        const canonical = `https://${CANON_HOST}${location.pathname}`;
+        const translated = `https://${TRANS_HOST}${location.pathname}?_x_tr_sl=pt&_x_tr_tl=en&_x_tr_hl=pt-BR&_x_tr_pto=wapp`;
+        return { canonical, translated };
+      }
+
+      // Verifica se já estamos no proxy do Google Translate
+      function isTranslatedHost() {
+        return location.hostname.endsWith('translate.goog');
+      }
+
+      // Atualiza o rótulo do botão conforme estado atual
+      function setButtonLabel(btn, translated) {
+        if (translated) {
+          btn.textContent = 'PT-BR';
+          btn.setAttribute('aria-label', 'Alternar para português');
+          document.documentElement.setAttribute('data-lang', 'en'); // mantém compatibilidade com seus blocos
+        } else {
+          btn.textContent = 'EN-US';
+          btn.setAttribute('aria-label', 'Switch to English');
+          document.documentElement.setAttribute('data-lang', 'pt');
+        }
+      }
+
+      window.addEventListener('DOMContentLoaded', function () {
+        const btn = document.getElementById('langBtn');
+        const translated = isTranslatedHost();
+        setButtonLabel(btn, translated);
+
+        btn.addEventListener('click', function () {
+          const { canonical, translated } = buildUrls();
+          // Toggla entre as duas versões
+          if (isTranslatedHost()) {
+            location.href = canonical;       // voltar para PT (host canônico)
+          } else {
+            location.href = translated;      // ir para EN (proxy translate.goog)
+          }
+        });
+      });
+    })();
+  </script>
 </head>
 <body>
 
 <button class="lang-toggle" id="langBtn" aria-label="Alternar idioma">EN-US</button>
-<!-- container oculto do Google Translate -->
-<div id="google_translate_element" aria-hidden="true"></div>
-
-<script>
-  (function () {
-    const btn = document.getElementById('langBtn');
-
-    function setBtn(labelLang) {
-      if (labelLang === 'en') {
-        btn.textContent = 'PT-BR';
-        btn.setAttribute('aria-label', 'Alternar para português');
-        document.documentElement.setAttribute('data-lang', 'en'); // mantém compatibilidade com seus blocos
-      } else {
-        btn.textContent = 'EN-US';
-        btn.setAttribute('aria-label', 'Switch to English');
-        document.documentElement.setAttribute('data-lang', 'pt');
-      }
-    }
-
-    function applyLang(target) {
-      const sel = document.querySelector('.goog-te-combo');
-      if (sel) {
-        sel.value = target;
-        sel.dispatchEvent(new Event('change'));
-        localStorage.setItem('lang-pref', target);
-        setBtn(target);
-      } else {
-        setTimeout(() => applyLang(target), 120);
-      }
-    }
-
-    // estado inicial (restaura preferência)
-    const saved = localStorage.getItem('lang-pref') || 'pt';
-    setBtn(saved);
-    if (saved === 'en') applyLang('en');
-
-    // click => alterna pt <-> en
-    btn.addEventListener('click', () => {
-      const current = localStorage.getItem('lang-pref') || 'pt';
-      const next = current === 'pt' ? 'en' : 'pt';
-      applyLang(next);
-    });
-  })();
-</script>
 
 <!-- ================= PT-BR ================= -->
 <div id="pt">
   <h1>[IOA6042] Instrumentação Aplicada a Processos Físicos e Biológicos (2025.2)</h1>
   <hr>
+
 
 
   <p style="text-align:center">
