Update translation link text to 'Translate to English'

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -51,7 +51,7 @@
 <!-- Botão -> link direto para a versão traduzida (EN) -->
 <a class="lang-toggle" id="langBtn" aria-label="Ver em inglês (via Google Translate)"
    href="https://thallescotta-github-io.translate.goog/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html?_x_tr_sl=pt&_x_tr_tl=en&_x_tr_hl=pt-BR&_x_tr_pto=wapp">
-  EN-US
+  🌐 Translate to English
 </a>
 
 <!-- ================= PT-BR ================= -->
